# kairosdb-rs

./: .RUST_MIGRATION_PLAN.md.swp  .gitignore  CASSANDRA_SCHEMA.md  CLAUDE.md  Cargo.toml  DATA_STORE_DESIGN.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  Makefile.toml  README.md  RUST_MIGRATION_PLAN.md  TILT_README.md  Tiltfile  arc_cycle_analysis.md  demo-data-generator.py  docker-compose.test.yml
.config/: nextest.toml
config/: development.yaml  production.yaml
kairosdb-core/: Cargo.toml  build.rs
kairosdb-core/examples/: datastore_demo.rs
kairosdb-core/proto/: format_v2.proto
kairosdb-core/src/: cassandra.rs  datapoint.rs  datastore.rs  error.rs  histogram_key_utility.rs  lib.rs  metrics.rs  query.rs  schema.rs  tags.rs  time.rs  validation.rs
kairosdb-core/src/datastore/: cassandra_legacy.rs
kairosdb-core/tests/: key_format_tests.rs
kairosdb-ingest/: Cargo.toml  Dockerfile
kairosdb-ingest/benches/: json_parsing.rs  simple_json_bench.rs
kairosdb-ingest/src/: bloom_manager.rs  cache_manager.rs  cache_metrics.rs  cassandra.rs  cassandra_client.rs  cassandra_metrics.rs  cdrs_cassandra.rs  config.rs  handlers.rs  http_metrics.rs  ingestion.rs  ingestion_impl.rs  json_parser.rs  lib.rs  main.rs  memory_queue.rs  metrics.rs  mock_cassandra.rs  mock_client.rs  multi_writer_client.rs  null_queue.rs  otel_metrics.rs  persistent_queue.rs  queue_trait.rs  real_cassandra.rs  real_cassandra_client.rs  shutdown.rs  simple_cassandra.rs  single_writer_client.rs  working_cassandra.rs
kairosdb-ingest/tests/: api_integration_tests.rs  e2e_tests.rs  integration_tests.rs  unit_tests.rs
kairosdb-query/: Cargo.toml
kairosdb-query/src/: aggregation.rs  config.rs  handlers.rs  lib.rs  main.rs  metrics.rs  query_engine.rs
kairosdb-query/tests/: api_integration_tests.rs
scripts/: test-all.sh
tests/: Cargo.toml  README.md
tests/src/: common.rs  data_flow.rs  health.rs  lib.rs  performance.rs  query_engine_tests.rs  rust_query.rs  throughput_collector.rs
tests/src/performance/: generator.rs  reporter.rs  scenarios.rs
tests/tests/: performance_tests.rs
tilt/: cassandra.yaml  kairosdb-ingest.yaml  kairosdb-query.yaml  kairosdb.yaml
