[package]
name = "kairosdb-ingest"
version.workspace = true
edition.workspace = true
description = "KairosDB ingestion service - handles time series data ingestion"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Web framework and HTTP
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Cassandra driver
scylla = { workspace = true }
uuid = { workspace = true }

# Serialization and configuration
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
config = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }

# Performance optimized data structures
ahash = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Time handling
chrono = { workspace = true }

# Validation
validator = { workspace = true }

# Base64 encoding
base64 = { workspace = true }

# HTTP client for health checks
reqwest = { workspace = true }
url = { workspace = true }

# Core library
kairosdb-core = { path = "../kairosdb-core" }

# Metrics collection (Prometheus)
prometheus = "0.14"

# Compression support
flate2 = "1.0"

# Memory monitoring
sysinfo = "0.37"

# Hex encoding for binary data
hex = "0.4"

# Hybrid cache for index deduplication
foyer = { workspace = true }

# Persistent queue storage with LZ4 compression for space efficiency
fjall = { version = "2.11", features = ["lz4"] }
bincode = { version = "2.0", features = ["serde"] }
rmp-serde = "1.1"  # MessagePack for queue serialization

# Multi-producer multi-consumer channels
flume = "0.11"

# CPU profiling support
pprof = { version = "0.15", features = ["flamegraph", "protobuf-codec"], optional = true }

# Memory allocator for better memory management
jemallocator = { workspace = true, optional = true }

[features]
default = ["jemalloc"]

# Enable CPU profiling with pprof
profiling = ["pprof"]

# Enable jemalloc for better memory management
jemalloc = ["jemallocator"]

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

# Library target for integration tests
[lib]
name = "kairosdb_ingest"
path = "src/lib.rs"

# Binary target for the main service
[[bin]]
name = "kairosdb-ingest"
path = "src/main.rs"

[[bench]]
name = "simple_json_bench"
harness = false