[package]
name = "kairosdb-query"
version = "0.1.0"
edition = "2021"
description = "KairosDB query service - handles time series data queries"
license = "Apache-2.0"
repository = "https://github.com/example/kairosdb-rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Math and statistics
ordered-float = "4.0"

# Caching
moka = { version = "0.12", features = ["future"] }

# Core library
kairosdb-core = { path = "../kairosdb-core" }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }