[package]
name = "kairosdb-query"
version = "0.1.0"
edition = "2021"
description = "KairosDB query service - handles time series data queries"
license = "Apache-2.0"
repository = "https://github.com/example/kairosdb-rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { workspace = true }

# Math and statistics
ordered-float = { workspace = true }

# Caching
moka = { version = "0.12", features = ["future"] }

# Core library
kairosdb-core = { path = "../kairosdb-core" }

[dev-dependencies]
tokio-test = "0.4"
tower = { workspace = true, features = ["util"] }