[package]
name = "kairosdb-query"
version.workspace = true
edition.workspace = true
description = "KairosDB query service - handles time series data queries"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time handling
chrono = { workspace = true }

# Validation
validator = { workspace = true }

# Math and statistics
ordered-float = { workspace = true }

# Caching
moka = { version = "0.12", features = ["future"] }

# Core library
kairosdb-core = { path = "../kairosdb-core" }

# Memory allocator for better memory management
jemallocator = { workspace = true, optional = true }

[features]
default = ["jemalloc"]

# Enable jemalloc for better memory management
jemalloc = ["jemallocator"]

[dev-dependencies]
tokio-test = "0.4"
tower = { workspace = true, features = ["util"] }