[package]
name = "kairosdb-e2e-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "End-to-end integration tests for KairosDB"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Performance testing dependencies
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = "0.3"

# Local dependencies
kairosdb-core = { path = "../kairosdb-core" }

# CPU profiling support (not needed in tests - profiling is in the service)
# pprof = { version = "0.13", features = ["flamegraph", "protobuf-codec"] }

[[bin]]
name = "perf_test"
path = "src/bin/perf_test.rs"