[package]
name = "kairosdb-e2e-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "End-to-end integration tests for KairosDB"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Performance testing dependencies
rand = "0.9"
rand_distr = "0.5"
serde = { version = "1.0", features = ["derive"] }

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = "0.3"
csv = "1.3"

# Local dependencies
kairosdb-core = { path = "../kairosdb-core" }

[[bin]]
name = "perf_test"
path = "src/bin/perf_test.rs"

[[bin]]
name = "perf_compare"
path = "src/bin/perf_compare.rs"

[[bin]]
name = "histogram_debug"
path = "src/bin/histogram_debug.rs"

[[bin]]
name = "histogram_format_discovery"
path = "src/bin/histogram_format_discovery.rs"

[[bin]]
name = "test_current_format"
path = "src/bin/test_current_format.rs"

[[bin]]
name = "discover_java_metrics"
path = "src/bin/discover_java_metrics.rs"